--- a/events/templates/events/register_event.html
+++ b/events/templates/events/register_event.html
@@ -1,17 +1,44 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-            <h1>Register Event</h1>
-            <br><br>
-            {% if submitted %}
-                Registered successfully!!!
-            {% else %}
+            <h1>Register for Event</h1>
+            <br>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Full Name</label>
+                          <input type="text" class="form-control" name="name" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Age</label>
+                            <input type="number" class="form-control" name="age" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email</label>
+                            <input type="email" class="form-control" name="email" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                            <input type="number" class="form-control" name="phone" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">College Name</label>
+                            <input type="text" class="form-control" name="college" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Semester</label>
+                            <input type="number" class="form-control" name="semester" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Gender</label>
+                            <input type="text" class="form-control" name="gender" aria-describedby="emailHelp" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Event Name</label>
+                            <input type="text" value="{{ event }}" class="form-control" name="event" aria-describedby="emailHelp" readonly>
+                        </div>
                     <br>
-                    <input class="btn btn-success" type="submit" value="Register">
+                    <input class="btn btn-success" type="submit" value="Submit">
                 </form>
-                <br>
-            {% endif %}
+            <br>
 {% endblock %}
